# webinar-agents

./: .gitignore  QUICKSTART.md  README.md  pyproject.toml
agents/: __init__.py  __main__.py  action_executor.py  agent_logger.py  combat_agent.py  example_usage.py  game_client.py  llm_service.py  plan_and_solve.ipynb  server.py  simple_agent.py  tools.py  utils.py
agents/prompts/: __init__.py
scripts/: __init__.py  run_agent_server.py  run_backend.py  run_frontend.py
turn-based-game/: .gitignore  API_README.md  next.config.ts  package-lock.json  package.json  tsconfig.json
turn-based-game/src/app/: page.tsx
turn-based-game/src/app/api/agent/events/: route.ts
turn-based-game/src/app/api/character/events/: route.ts
turn-based-game/src/app/api/character/multi-move/: route.ts
turn-based-game/src/app/api/character/reset/: route.ts
turn-based-game/src/app/api/character/switch-agent/: route.ts
turn-based-game/src/app/api/character/use-button/: route.ts
turn-based-game/src/app/api/character/use-pc/: route.ts
turn-based-game/src/app/api/level/info/: route.ts
turn-based-game/src/app/api/level/set/: route.ts
turn-based-game/src/components/: AgentControls.tsx  Game.tsx  MainMenu.tsx  PhaserGame.tsx
turn-based-game/src/lib/: gameConfig.ts  gameLogic.ts  gameScene.ts  gameState.ts  gameTypes.ts  level1.json  level2.json  level3.json
webinar/: examples.ipynb
