[tool.poetry]
name = "webinar-agents"
version = "0.1.0"
description = "Webinar project with turn-based game and AI agents"
authors = ["Andrey Kovalev"]
packages = [{include = "agents"}, {include = "scripts"}] 

[tool.poetry.dependencies]
python = "^3.12.3"
jupyter = "^1.0.0"
notebook = "^7.0.0"
langchain = "^0.3.0"
langchain-community = "^0.3.0"
langchain-openai = "^0.2.0"
langgraph = "^0.3.0"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
openai = "^1.0.0"
types-requests = "^2.31.0"
flask = "^3.0.0"
flask-cors = "^4.0.0"

[tool.poetry.group.dev.dependencies]
black = "^24.0.0"
isort = "^5.13.0"
flake8 = "^7.0.0"
pytest = "^8.0.0"

[tool.poetry.scripts]
front = "scripts.run_frontend:main"
agents = "scripts.run_agent_server:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 